加入文件管理器,目前只实现了查询功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">experience</string>
+    <string name="Java_technology">java技术</string>
+    <string name="Use_of_RxJava">RxJava的使用</string>
+    <string name="Features">功能</string>
+    <string name="QRCode_recognition">QRCode识别</string>
+    <string name="camera">相机</string>
+    <string name="Invasive_experience">侵入式体验(通知栏和导航栏控制)</string>
+    <string name="Authorized_operation">授权操作</string>
+    <string name="file_management">文件管理</string>
+    <string name="media_management">媒体管理</string>
+    <string name="download_management">下载管理</string>
+    <string name="Database_operation">数据库操作</string>
+    <string name="Get_image">获取图片</string>
+    <string name="Get_video">获取视频</string>
+
+    <string name="Take_a_photo">拍照</string>
+    <string name="Album">相册</string>
 </resources>
