加入文件管理器,目前只实现了查询功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
 
     <string name="Take_a_photo">拍照</string>
     <string name="Album">相册</string>
+
+    <string name="determine">确定</string>
+
 </resources>
