--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,9 @@
     <string name="Album">相册</string>
 
     <string name="determine">确定</string>
+    <string name="Preview">预览</string>
+    <string name="Preview_d">预览(%1$d)</string>
+    <string name="Original_image">原图</string>
+    <string name="select">选择</string>
 
 </resources>
