--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="view">视图</string>
     <string name="PullDownToRefresh">下拉刷新,上拉加载更多</string>
 
+    <string name="There_is_no_application_that_can_open_this_file">没有可以打开此文件的应用程序!</string>
+    <string name="File_has_been_downloaded">文件已经下载!</string>
 </resources>
