--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="File_Download_in_progress">文件下载进行中!</string>
     <string name="File_download_waiting_to_start">文件下载等待启动!</string>
 
+    <string name="add">添加</string>
 </resources>
