navigation框架的使用

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="RoomComponents">Room组件(数据库框架)</string>
     <string name="PagingComponents">Paging组件(RecyclerView分页库)</string>
     <string name="WorkMangerComponents">WorkManger组件(后台任务库)</string>
+    <string name="Data_BindingComponents">Data Binding组件(数据绑定)</string>
 
     <string name="Features">功能</string>
     <string name="QRCode_recognition">QRCode识别</string>
