--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,9 @@
     <string name="sensor">传感器</string>
     <string name="SMS">短信</string>
     <string name="storage">存储</string>
+    <string name="retry">重试</string>
+    <string name="no_more">没有更多!</string>
+    <string name="network_anomaly">网络异常,请重试!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
