--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,9 @@
     <string name="retry">重试</string>
     <string name="no_more">没有更多!</string>
     <string name="network_anomaly">网络异常,请重试!</string>
+    <string name="typeface">字体</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 </resources>
