--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="no_more">没有更多!</string>
     <string name="network_anomaly">网络异常,请重试!</string>
     <string name="typeface">字体</string>
+    <string name="s_projects">%1$s个项目</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="appwidget_text">EXAMPLE</string>
